{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "MapEditing",
            "id": "8b2caed3-88ea-4089-99b8-ebfbe95d53eb",
            "actions": [
                {
                    "name": "MouseRightClick",
                    "type": "Button",
                    "id": "71c64d12-beb8-4fe5-8870-4e9d687dceb5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseLeftClick",
                    "type": "Button",
                    "id": "05c64386-3a61-489c-b564-8b67be564e57",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "79a1952c-520d-46ba-9878-c09b1ea7596d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OnEnter",
                    "type": "Button",
                    "id": "29d450c0-d875-45c3-8f61-77e854064036",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnExit",
                    "type": "Button",
                    "id": "6db85702-1c49-45dc-9cfa-89f7abb51789",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cadd0e5b-d96c-4e27-a346-4af0f0fb50fa",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "745d187f-b535-46a4-aa53-7c9b64550302",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e30d142-f149-4f37-b1b1-0771af58ea4f",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0e6093c1-80d6-47c2-ab40-1ef10f5c32a0",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnEnter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e4e1ba5-5531-47d6-8c31-bc9f86b8e9bd",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnExit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}